Question Card Button alignment fix

--- a/src/components/styles/Button.css
+++ b/src/components/styles/Button.css
@@ -1,9 +1,11 @@
 .btn {
     font-size: 16px;
-    display: inline;
+    display: flex;
     border-radius: 10px;
     padding: 4px 10px;
     text-align: center;
+    align-items: center;
+    vertical-align: middle;
     margin: auto 20px;
     height: 20px;
     width: 60px;
